# clawclaw-soul

./: .gitignore  AGENTS.md  BACKLOG.md  README.md  ROADMAP.md  design-tokens.json  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
agent_soul/: __init__.py  __main__.py  dasha.py  engine.py  ephemeris.py  prompt.py  refresh.py  soul.py  tables.py  temporal_md.py  transit.py
app/: api.py  master.py  refresh.py
benchmark/: README.md  benchmark.py  cvb_runner.py  embed.py  metrics.py  plot.py  prompts.json  proxy_metrics.py  remeasure_009.py  semantic_proof.py  traits.py  trojan_metrics.py  trojan_runner.py
benchmark/results/: cvb_v3_analysis.json  cvb_v3_verdict.json  semantic_proof_verdict.json
clawclaw_soul/: __init__.py  __main__.py  api.py  compatibility.py  dasha.py  engine.py  ephemeris.py  mcp_server.py  params.py  prompt.py  soul.py  tables.py  temporal_md.py  transit.py  yogas.py
docs/: index.html
docs/experiments/: 001-benchmark-brainstorm.md  002-cvb-results-brainstorm.md  003-jyotish-fundamentals-brainstorm.md  004-scoring-brainstorm-r1.md  004-scoring-brainstorm-r2.md  004-scoring-brainstorm-r3.md  005-cvb-v3-structural-constraints.md  006-semantic-proof.md
examples/: SOUL-analytical.md  SOUL-cautious.md  SOUL-creative.md
openclaw/: SKILL.md  install.py  openclaw.json
scripts/: generate_drift_data.py
security/: DEFENSE.md  Dockerfile.openclaw  Dockerfile.soul-api  docker-compose.hardened.yml  entrypoint-openclaw.sh  openclaw-security.json  seccomp-profile.json  squid.conf
tests/: test_api.py  test_compatibility.py  test_dasha.py  test_engine.py  test_engine_v2.py  test_ephemeris.py  test_master.py  test_prompt.py  test_quickstart.py  test_soul.py  test_soul_md.py  test_structural.py  test_transit.py  test_x402.py  test_yogas.py
