[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-soul"
version = "0.1.0"
description = "Deterministic personality modifiers for AI agents via celestial mechanics"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "skyfield>=1.45",
]

[project.optional-dependencies]
benchmark = [
    "ollama",
    "numpy",
    "matplotlib",
    "nltk",
    "sentence-transformers",
]
dev = [
    "pytest>=7.0",
    "ruff",
]

[tool.setuptools.packages.find]
include = ["agent_soul*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
